# raven

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md  flake.nix  imgui.ini  justfile
.claude/: settings.local.json
.github/workflows/: ci.yml
assets/data/: config.json
assets/data/patterns/: aimed_burst.json  manifest.json  nova_legendary.json  spiral_3way.json
assets/data/stages/: stage_01.json  stage_02.json  stage_03.json  stage_manifest.json
assets/maps/: raven.ldtk
cmake/: CPM.cmake  CompilerWarnings.cmake  Dependencies.cmake  Sanitizers.cmake  Steamworks.cmake
docs/: Doxyfile  api.just  art-spec.md  book.just
docs/book/: book.toml
docs/book/src/: SUMMARY.md  art-integration.md  art-resources.md  art-spec.md  audio-integration.md  audio-resources.md  audio-spec.md  introduction.md  playtest.md
docs/book/src/architecture/: ecs.md  game-loop.md  input.md  melee-and-dash.md  overview.md  player-classes.md  rendering.md  room-progression.md  scenes.md  shooting.md  smooth-movement.md  sprite-animation.md  tilemaps.md  weapons.md
docs/book/src/art/: art-aseprite-guide.md  art-integration.md  art-spec.md  art-timeline.md  color-theory.md  pigment.md  tileset-palette.md
docs/book/src/art/characters/: knight.md
docs/book/src/decisions/: 0001-cpp20-entt-sdl2.md  0002-fixed-timestep-120hz.md  0003-virtual-resolution-480x270.md  0004-data-driven-patterns.md  0005-no-std-filesystem.md  0006-no-third-party-engine.md  0007-deferred-entity-destruction.md  0008-melee-disarm-over-death-drops.md  0009-data-driven-wave-definitions.md  0010-sdl2-mixer-audio.md  0011-class-as-component-recipe.md  0012-concussion-shot-vfx.md  0013-sdl3-migration.md  0014-npc-shop-progression.md  0015-deferred-scene-transitions.md  0016-executable-relative-asset-paths.md  0017-settings-pref-path.md  0018-bitmap-font-text.md  0019-sdl3-native-audio.md  0020-bundled-dependency-fallback.md  0021-optional-steamworks.md
docs/book/src/devlog/: 2026-02-08-danmaku-to-roguelike.md  2026-02-08-project-setup.md  2026-02-10-melee-dash-system.md  2026-02-11-room-progression.md  2026-02-12-player-class-system.md  2026-02-12-sdl3-migration.md  2026-07-03-steam-readiness-sprint.md  2026-07-05-options-and-audio.md  2026-07-06-windows-and-steamworks.md  2026-07-07-victory-and-high-scores.md  2026-07-15-architecture-review-fixes.md
docs/book/src/guide/: building.md  environment.md  project-tour.md
docs/decisions/: 0003-virtual-resolution-480x270.md  0004-data-driven-patterns.md  0006-no-third-party-engine.md  0007-deferred-entity-destruction.md  0008-melee-disarm-over-death-drops.md
docs/design/: PROJECT_PRIMER.md  README_IMPORT_INSTRUCTIONS.md  anti_synergy_warnings.csv  counter_matrix.csv  death_messages.csv  entity_database.csv  item_synergy_matrix.csv  playtesting_log.csv  raven_design_matrix_template.md  raven_game_design_context.md  tag_reference.csv
docs/devlog/: 000_project_setup.md  2026-02-08-danmaku-to-roguelike.md  2026-02-08-project-setup.md  2026-02-10-melee-dash-system.md
docs/pigment/: CLAUDE.md
src/: main.cpp
src/audio/: audio_engine.cpp  audio_engine.hpp
src/core/: clock.hpp  game.cpp  game.hpp  input.cpp  input.hpp  paths.cpp  paths.hpp  save_data.cpp  save_data.hpp  settings.cpp  settings.hpp  string_id.hpp
src/debug/: debug_overlay.cpp  debug_overlay.hpp
src/ecs/: components.hpp  player_class.cpp  player_class.hpp
src/ecs/systems/: ai_system.cpp  ai_system.hpp  animation_system.cpp  animation_system.hpp  bullet_spawn.cpp  bullet_spawn.hpp  charged_shot_system.cpp  charged_shot_system.hpp  cleanup_system.cpp  cleanup_system.hpp  collision_system.cpp  collision_system.hpp  concussion_shot_system.cpp  concussion_shot_system.hpp  damage_system.cpp  damage_system.hpp  dash_system.cpp  dash_system.hpp  emitter_system.cpp  emitter_system.hpp  ground_slam_system.cpp  ground_slam_system.hpp  hitbox_math.hpp  hud_system.cpp  hud_system.hpp  input_system.cpp  input_system.hpp  melee_system.cpp  melee_system.hpp  movement_system.cpp  movement_system.hpp  pickup_system.cpp  pickup_system.hpp  player_utils.hpp  projectile_system.cpp  projectile_system.hpp  render_system.cpp  render_system.hpp  shooting_system.cpp  shooting_system.hpp  (+6 more)
src/patterns/: pattern_library.cpp  pattern_library.hpp
src/platform/: steam.cpp  steam.hpp
src/rendering/: bitmap_font.cpp  bitmap_font.hpp  renderer.cpp  renderer.hpp  sprite_sheet.cpp  sprite_sheet.hpp  tilemap.cpp  tilemap.hpp  tilemap_loader.cpp
src/scenes/: char_select_scene.cpp  char_select_scene.hpp  game_over_scene.cpp  game_over_scene.hpp  game_scene.cpp  game_scene.hpp  options_scene.cpp  options_scene.hpp  pause_scene.cpp  pause_scene.hpp  scene.hpp  scene_manager.cpp  title_scene.cpp  title_scene.hpp  victory_scene.cpp  victory_scene.hpp
tests/: CMakeLists.txt  test_ai.cpp  test_audio.cpp  test_bitmap_font.cpp  test_collision.cpp  test_ecs.cpp  test_emitters.cpp  test_melee_dash.cpp  test_patterns.cpp  test_pickups.cpp  test_player_class.cpp  test_save_data.cpp  test_settings.cpp  test_shooting.cpp  test_tilemap.cpp  test_waves.cpp
tools/: gen_font.py  gen_placeholder_sprites.py  gen_sfx.py
tools/scripts/: generate_placeholders.py
